--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
     "validator": "^13.12.0"
   }
