--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "chalk": "^5.4.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "device-detector-js": "^3.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "firebase-admin": "^13.3.0",
+    "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.2",
@@ -36,7 +39,7 @@
     "nodemon": "^3.1.9",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
+    "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0",
     "validator": "^13.12.0"
   }
