--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+"update-geoip": "curl --ssl-no-revoke -sS \"https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-City&license_key=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&suffix=tar.gz\" | tar -xz --strip-components=1 -C geoip-data",
+    "postinstall": "if [ ! -f geoip-data/GeoLite2-City.mmdb ]; then npm run update-geoip; fi"
   },
   "keywords": [
     "node.js",
@@ -32,14 +34,16 @@
     "firebase-admin": "^13.3.0",
     "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
+    "maxmind": "^4.3.27",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^4.1.1",
     "node-media-server": "^4.0.7",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
-    "ua-parser-js": "^2.0.3",
+    "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "validator": "^13.12.0"
   }
